The whole Project

--- a/resources/scss/_variable.scss
+++ b/resources/scss/_variable.scss
@@ -1,5 +1,5 @@
-$primary: #ff2626;
-$primary-hover:#a00606;
+$primary: #0e5ae9;
+$primary-hover:#0410b1;
 $secondary:#F8F8F8;
 $pure:#fff;
 $dark:#232323;
