--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -49,21 +49,21 @@
 
 <!-- preloader -->
 
-<div class="loader_bg">
+<!-- <div class="loader_bg">
     <div class="loader"></div>
-</div>
+</div> -->
 
 <nav class="container flex justify-between items-center mx-auto">
     <div>
         <a href='/'>
-            <img src="/img/logo.png" alt="logo" class="logo">
+            <img src="/img/logo.png" alt="logo" class="logo" width="220px">
         </a>
         
     </div>
     <div >
         <ul class="flex justify-between my-7">
             <li class="mx-6 nav-icon"><a href="/">Menu</a></li>
-            <li class="mx-6 nav-icon"><a href="#">Offers</a></li>
+            <li class="mx-6 nav-icon"><a href="/offers">Offers</a></li>
             <%if(user){%>
                 <li class="mx-6 nav-icon"><a href='/customers/orders'>My Orders</a></li>
             <li class="mx-6 nav-icon">
